--- a/server/config/config.env
+++ b/server/config/config.env
@@ -3,7 +3,7 @@ FRONTEND_URL=http://localhost:5173
 MONGO_URI=mongodb://127.0.0.1:27017
 
 
-SMTP_HOST=smtp.example.com
+SMTP_HOST=smtp.gmail.com
 SMTP_SERVICE=gmail
 SMTP_PORT=465
 EMAIL_MAIL=rajputtarun698@gmail.com
